--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ For this little project I only focus on women's data (the wta repo) and I have a
 
 ### The tools
 
-This is a complete [`{tidyverse}` powered project](https://www.tidyverse.org/). 
+This is a complete [`{tidyverse}` powered project](https://www.tidyverse.org/), with a touch of [`{hrbrthemes}`](https://hrbrmstr.github.io/hrbrthemes/). 
 I've also used this project as a way to get to know [Thomas Lin Pedersen's](https://github.com/thomasp85) new [`{ggfx}` package](https://github.com/thomasp85/ggfx), which premise I love as I'm keen to add a bit of *depth* to digital visualisations.
 
 ## The code
